--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/index.ts"
+    "start": "nodemon --ext ts src/index.ts"
   },
   "author": "MargotDem",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^13.9.0",
     "nodemon": "^2.0.2",
     "ts-node": "^8.6.2",
     "typescript": "^3.8.3"
@@ -18,12 +19,8 @@
     "ext": "js"
   },
   "dependencies": {
-    "@types/es6-shim": "^0.31.39",
-    "@types/node": "^13.9.0",
     "axios": "^0.19.2",
     "fastify": "^2.12.1",
-    "mysql": "^2.18.1",
-    "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.24"
+    "mysql": "^2.18.1"
   }
 }
