--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "axios": "^0.19.2",
     "fastify": "^2.12.1",
-    "mysql": "^2.18.1"
+    "fastify-sequelize": "^1.0.4",
+    "mysql2": "^2.1.0",
+    "sequelize": "^5.21.5"
   }
 }
